Add changes to notebook

--- a/mchifala/Project_MC.ipynb
+++ b/mchifala/Project_MC.ipynb
@@ -2,18 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'tensorflow'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-d51b889ac635>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mtensorflow\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtensorflow\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeras\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mkeras\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mtensorflow\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeras\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlayers\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mInput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mDense\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mActivation\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mtensorflow\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeras\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdatasets\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmnist\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'tensorflow'"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
      ]
     }
    ],
@@ -115,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -123,12 +119,48 @@
      "output_type": "stream",
      "text": [
       "Train on 60000 samples, validate on 10000 samples\n",
-      "Epoch 1/2\n",
-      "60000/60000 [==============================] - 1s 18us/sample - loss: 0.3415 - accuracy: 0.9102 - val_loss: 0.2960 - val_accuracy: 0.9266\n",
-      "Epoch 2/2\n",
-      "60000/60000 [==============================] - 1s 19us/sample - loss: 0.2409 - accuracy: 0.9331 - val_loss: 0.2481 - val_accuracy: 0.9332\n",
-      "Test loss: 0.24807115334477275\n",
-      "Test accuracy: 0.9332\n"
+      "Epoch 1/20\n",
+      "60000/60000 [==============================] - 1s 19us/sample - loss: 0.0936 - accuracy: 0.9721 - val_loss: 0.1788 - val_accuracy: 0.9571\n",
+      "Epoch 2/20\n",
+      "60000/60000 [==============================] - 1s 18us/sample - loss: 0.0916 - accuracy: 0.9733 - val_loss: 0.1703 - val_accuracy: 0.9591\n",
+      "Epoch 3/20\n",
+      "60000/60000 [==============================] - 1s 18us/sample - loss: 0.0816 - accuracy: 0.9758 - val_loss: 0.1629 - val_accuracy: 0.9596\n",
+      "Epoch 4/20\n",
+      "60000/60000 [==============================] - 1s 18us/sample - loss: 0.0746 - accuracy: 0.9768 - val_loss: 0.1700 - val_accuracy: 0.9596\n",
+      "Epoch 5/20\n",
+      "60000/60000 [==============================] - 1s 18us/sample - loss: 0.0693 - accuracy: 0.9789 - val_loss: 0.1693 - val_accuracy: 0.9609\n",
+      "Epoch 6/20\n",
+      "60000/60000 [==============================] - 1s 18us/sample - loss: 0.0726 - accuracy: 0.9779 - val_loss: 0.1724 - val_accuracy: 0.9600\n",
+      "Epoch 7/20\n",
+      "60000/60000 [==============================] - 1s 18us/sample - loss: 0.0682 - accuracy: 0.9792 - val_loss: 0.1580 - val_accuracy: 0.9633\n",
+      "Epoch 8/20\n",
+      "60000/60000 [==============================] - 1s 19us/sample - loss: 0.0605 - accuracy: 0.9818 - val_loss: 0.1794 - val_accuracy: 0.9620\n",
+      "Epoch 9/20\n",
+      "60000/60000 [==============================] - 1s 18us/sample - loss: 0.0584 - accuracy: 0.9826 - val_loss: 0.1555 - val_accuracy: 0.9643\n",
+      "Epoch 10/20\n",
+      "60000/60000 [==============================] - 1s 18us/sample - loss: 0.0578 - accuracy: 0.9825 - val_loss: 0.1796 - val_accuracy: 0.9594\n",
+      "Epoch 11/20\n",
+      "60000/60000 [==============================] - 1s 19us/sample - loss: 0.0544 - accuracy: 0.9834 - val_loss: 0.1582 - val_accuracy: 0.9656\n",
+      "Epoch 12/20\n",
+      "60000/60000 [==============================] - 1s 18us/sample - loss: 0.0502 - accuracy: 0.9844 - val_loss: 0.1693 - val_accuracy: 0.9620\n",
+      "Epoch 13/20\n",
+      "60000/60000 [==============================] - 1s 19us/sample - loss: 0.0452 - accuracy: 0.9868 - val_loss: 0.1725 - val_accuracy: 0.9646\n",
+      "Epoch 14/20\n",
+      "60000/60000 [==============================] - 1s 18us/sample - loss: 0.0481 - accuracy: 0.9851 - val_loss: 0.1774 - val_accuracy: 0.9630\n",
+      "Epoch 15/20\n",
+      "60000/60000 [==============================] - 1s 19us/sample - loss: 0.0433 - accuracy: 0.9872 - val_loss: 0.1677 - val_accuracy: 0.9644\n",
+      "Epoch 16/20\n",
+      "60000/60000 [==============================] - 1s 19us/sample - loss: 0.0433 - accuracy: 0.9866 - val_loss: 0.1745 - val_accuracy: 0.9653\n",
+      "Epoch 17/20\n",
+      "60000/60000 [==============================] - 1s 18us/sample - loss: 0.0463 - accuracy: 0.9861 - val_loss: 0.1808 - val_accuracy: 0.9634\n",
+      "Epoch 18/20\n",
+      "60000/60000 [==============================] - 1s 18us/sample - loss: 0.0439 - accuracy: 0.9866 - val_loss: 0.1841 - val_accuracy: 0.9626\n",
+      "Epoch 19/20\n",
+      "60000/60000 [==============================] - 1s 19us/sample - loss: 0.0367 - accuracy: 0.9884 - val_loss: 0.1765 - val_accuracy: 0.9667\n",
+      "Epoch 20/20\n",
+      "60000/60000 [==============================] - 1s 18us/sample - loss: 0.0356 - accuracy: 0.9891 - val_loss: 0.1910 - val_accuracy: 0.9634\n",
+      "Test loss: 0.19099874410411577\n",
+      "Test accuracy: 0.9634\n"
      ]
     }
    ],
@@ -136,7 +168,7 @@
     "# Train model\n",
     "num_classes = 10\n",
     "batch_size = 128\n",
-    "epochs = 2\n",
+    "epochs = 20\n",
     "weights = {}\n",
     "\n",
     "(x_train, y_train), (x_test, y_test) = mnist.load_data()\n",
@@ -150,20 +182,20 @@
     "#print_weights = LambdaCallback(on_epoch_end=lambda batch, logs: print(model.()))#weights.append(model.layers[1].get_weights()))\n",
     "\n",
     "filepath=\"epoch:{epoch:02d}-val_acc:{val_accuracy:.4f}.hdf5\"\n",
-    "save_weights = ModelCheckpoint(filepath, \n",
-    "                               monitor='val_loss', \n",
-    "                               verbose=0, \n",
-    "                               save_best_only=False, \n",
-    "                               save_weights_only=True, \n",
-    "                               mode='auto', period=1)\n",
+    "#save_weights = ModelCheckpoint(filepath, \n",
+    "#                               monitor='val_loss', \n",
+    "#                               verbose=0, \n",
+    "#                               save_best_only=False, \n",
+    "#                               save_weights_only=True, \n",
+    "#                               mode='auto', period=1)\n",
     "\n",
     "\n",
     "history = model.fit(x_train, y_train,\n",
     "                    batch_size=batch_size,\n",
     "                    epochs=epochs,\n",
     "                    verbose=1,\n",
-    "                    validation_data=(x_test, y_test),\n",
-    "                    callbacks = [save_weights])\n",
+    "                    validation_data=(x_test, y_test))#,\n",
+    "                    #callbacks = [save_weights])\n",
     "\n",
     "\n",
     "score = model.evaluate(x_test, y_test, verbose=0)\n",
@@ -215,14 +247,13 @@
     }
    ],
    "source": [
+    "#  Get the images of 1's with hats vs. no hats\n",
     "import os\n",
     "hats = os.listdir(os.path.join(os.getcwd(),\"ones_hats\"))\n",
     "hats = [x.split(\".\")[0] for x in hats]\n",
     "\n",
     "no_hats = os.listdir(os.path.join(os.getcwd(),\"ones_no_hats\"))\n",
-    "no_hats = [x.split(\".\")[0] for x in no_hats]\n",
-    "\n",
-    "print(no_hats)"
+    "no_hats = [x.split(\".\")[0] for x in no_hats]"
    ]
   }
  ],
